--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework.web=DEBUG
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/mylocaldb
+spring.datasource.username=ado
+spring.datasource.password=sistema
