--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,16 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.5</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>				
 	</dependencies>
 	
 	<dependencyManagement>
